--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 <p>Hi, my name is Victor.<br />
 I work as an Associate Software Engineer for Red Hat, where i help shape
 <a href="https://github.com/openshift/origin">Openshift V3</a> into a powerful PaaS for
-developers. I enjoy writing Go and Python depending on the case and my first
-automation tool of choice is and will remain Ansible.<br />
-Besides that i&rsquo;m also a motorcycle rider and enthusiast for 9 years. An open
+developers.</p>
+
+<p>Besides that i&rsquo;m also a motorcycle rider and enthusiast for 9 years. An open
 source developer. Linux lover. INFP. Pantheist. Stargazer. And amateur writer @ <a href="http://pi-victor.github.io/starry-night">Starry-Night</a>.</p>
 
 
