*: update the css and remove unused social. * update links to cloudflavor.io

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>pi-victor.github.io</title>
+    <title>victor.cloudflavor.io</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- ... -->
@@ -21,6 +21,9 @@
         <div class="intro">
           <h2>Victor Palade</h2>
           <h4>Open Source/Cloud/DevOps</h4>
+          <h4>Founder of the FOSS organization <a href="https://cloudflavor.io">cloudflavor.io</a></h4>
+          <br>
+          <p>contact: <a href="mailto:victor@cloudflavor.io">victor[at]cloudflavor[dot]io</a></p>
           <hr class="style1">
           <blockquote>“We must all suffer from one of two pains: the pain of discipline or the pain of regret. The difference is discipline weighs ounces while regret weighs tons.” <footer>Jim Rohn</footer>
           </blockquote>
@@ -33,12 +36,6 @@
           </div>
           <div class="col-lg-3">
             <a href="https://www.linkedin.com/in/victorpalade"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
-          </div>
-          <div class="col-lg-3">
-            <a href="https://medium.com/@codeflavor"><i class="fa fa-medium fa-3x" aria-hidden="true"></i></a>
-          </div>
-          <div class="col-lg-3">
-            <a href="https://twitter.com/codeflavor"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
