index: update medium handle

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://www.linkedin.com/in/victorpalade"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
           </div>
           <div class="col-lg-3">	
-            <a href="https://medium.com/@codeflavor"><i class="fa fa-medium fa-3x" aria-hidden="true"></i></a>	
+            <a href="https://medium.com/@cloudflavor"><i class="fa fa-medium fa-3x" aria-hidden="true"></i></a>	
           </div>
         </div>
       </div>
