--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="https://github.com/pi-victor"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
           </div>
           <div class="col-lg-3">
-            <a href="https://www.linkedin.com/in/victorpalade"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+            <a href="https://stackoverflow.com/story/pivictor"><i class="fa fa-stack-overflow fa-3x" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
